add menu and form style

--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
                 <a href="#" class="logo">
                     <img src="img/logo.svg" width="68" height="52" alt="Pilates+">
                 </a>
-                <ul class="site-navigation">
+                <ul class="site-navigation ">
                     <li class="site-navigation-item">
-                        <a href="#" id="about-link">О нас</a>
+                        <a href="#" id="about-link">О пилатесе</a>
                     </li>
                     <li class="site-navigation-item">
-                        <a href="#tarifs" id="tarifs-link">Расписание</a>
+                        <a href="#tarifs" id="tarifs-link">Расписание и стоимость</a>
                     </li>
                     <li class="site-navigation-item">
-                        <a href="#" id="price-link">Стоимость</a>
+                        <a href="#" id="price-link">Как проходят занятия</a>
                     </li>
                     <li class="site-navigation-item">
                         <a href="#reviews" id="reviews-link">Отзывы</a>
                     </li>
+                    <li class="site-navigation-item">
+                        <a href="#social" id="reviews-link">Контакты</a>
+                    </li>
                 </ul>
-                <button type="submit" class="burger-menu-btn">Показать меню <img src="./img/burger.png" width="23"
+                <button type="button" class="burger-menu-btn">Показать меню <img src="./img/burger.png" width="23"
                         height="16" alt="Кнопка навигации"></button>
                 <a href="tel:+79183650707" class="header-phone">+7 918 365 07 07</a>
             </nav>
@@ -313,10 +316,10 @@
             </div>
         </section>
     </main>
-    <footer class="footer-nav">
+    <footer class="footer-nav" id="social">
         <div class="wrapper">
             <p class="trademarks">Pilates Plus, 2017 ©</p>
-            <a href="#">
+            <a href="#" class="footer-logo">
                 <img src="img/logo.svg" width="68" height="52" alt="Pilates+">
             </a>
             <ul class="footer-social-list">
