--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                         <a href="#reviews" id="reviews-link">Отзывы</a>
                     </li>
                     <li class="site-navigation-item">
-                        <a href="#social" id="reviews-link">Контакты</a>
+                        <a href="#social" id="social-link">Контакты</a>
                     </li>
+                     <li> <button type="button" class="closeMenu">Закрыть меню</button></li>
                 </ul>
                 <button type="button" class="burger-menu-btn">Показать меню <img src="./img/burger.png" width="23"
                         height="16" alt="Кнопка навигации"></button>
@@ -312,7 +313,7 @@
                 </dl>
             </div>
             <div class="map-wrapper">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.807240850335!2d40.570319899999994!3d45.433386899999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40fa466caee8345f%3A0x35b75298f6d78e58!2z0YPQuy4g0JTRg9Cz0LjQvdC10YYsIDEw0LAsINCa0YDQvtC_0L7RgtC60LjQvSwg0JrRgNCw0YHQvdC-0LTQsNGA0YHQutC40Lkg0LrRgNCw0LksIDM1MjM4MA!5e0!3m2!1sru!2sru!4v1651653474677!5m2!1sru!2sru" width="1366" height="513" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen ></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.807240850335!2d40.570319899999994!3d45.433386899999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40fa466caee8345f%3A0x35b75298f6d78e58!2z0YPQuy4g0JTRg9Cz0LjQvdC10YYsIDEw0LAsINCa0YDQvtC_0L7RgtC60LjQvSwg0JrRgNCw0YHQvdC-0LTQsNGA0YHQutC40Lkg0LrRgNCw0LksIDM1MjM4MA!5e0!3m2!1sru!2sru!4v1651653474677!5m2!1sru!2sru" width="1366" height="513" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen ></iframe>
             </div>
         </section>
     </main>
